Closed
Bug 748071
Opened 13 years ago
Closed 13 years ago
IonMonkey: "Assertion failure: !"Need to determine correct offsets for generateEnterJIT() args on Win64.","
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: gkw, Assigned: sstangl)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
92.74 KB,
text/plain
|
Details | |
908 bytes,
patch
|
mjrosenb
:
review+
|
Details | Diff | Splinter Review |
Object.defineProperty(this, "x", {
get: function() {
return x
}
})
x
asserts js debug shell on IonMonkey changeset 9e64f779b611 without any CLI flags at Assertion failure: !"Need to determine correct offsets for generateEnterJIT() args on Win64.",
First 64-bit Windows bug!
![]() |
Reporter | |
Comment 1•13 years ago
|
||
This has been happening at least since:
http://hg.mozilla.org/projects/ionmonkey/rev/43b55878da46
and probably has existed since IonMonkey creation.
Assignee | ||
Comment 2•13 years ago
|
||
It was introduced by Bug 723333. I need access to a Win64 box to verify the right argument offsets in ion/x64/Trampoline-x64.cpp:72-73.
Assignee | ||
Comment 3•13 years ago
|
||
After time spent learning Win64 debug tools with Gary's help, it turns out that the guessed values are actually valid. So we can just remove the assertion.
Attachment #617718 -
Flags: review?(dvander)
Assignee | ||
Comment 4•13 years ago
|
||
Comment on attachment 617718 [details] [diff] [review]
Remove assertion.
mjrosenb offered a review, so I'm taking it!
Attachment #617718 -
Flags: review?(dvander)
Assignee | ||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Attachment #617718 -
Flags: review+
![]() |
Reporter | |
Updated•13 years ago
|
Assignee: general → sstangl
You need to log in
before you can comment on or make changes to this bug.
Description
•