Bug 748071 - Get generateEnterJIT() working on Win64. r=mjrosenb